deployment/k8s/base/redis-service.yml
apiVersion: v1
kind: Service
metadata:
  name: chatdome-redis
  labels:
    app: chatdome-redis
spec:
  selector:
    app: chatdome-redis
  ports:
    - port: 6379
      targetPort: 6379
  type: ClusterIP
