deployment/k8s/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chatdome-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - chatdome.devrayco.name.ng
      secretName: chatdome-tls-secret
  rules:
    - host: chatdome.devrayco.name.ng
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chat-dome-service
                port:
                  number: 80
